Refactoring of Testing after Package structure has been modified. Incremented Code Coverage and covered some additional methods.