@@ -1,7 +1,11 @@
 package it.polimi.ingsw.gc12.Model.Cards;
 
 import com.google.gson.reflect.TypeToken;
-import it.polimi.ingsw.gc12.Utilities.JSONParser;
+import it.polimi.ingsw.gc12.Model.Game;
+import it.polimi.ingsw.gc12.Model.GameLobby;
+import it.polimi.ingsw.gc12.Model.InGamePlayer;
+import it.polimi.ingsw.gc12.Model.Player;
+import it.polimi.ingsw.gc12.Utilities.GenericPair;
 import it.polimi.ingsw.gc12.Utilities.Resource;
 import it.polimi.ingsw.gc12.Utilities.Side;
 import org.junit.jupiter.api.BeforeAll;
@@ -9,8 +13,7 @@ import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.*;
 
 class PlayableCardTest {
     private static ArrayList<ResourceCard> resourceCards;
@@ -19,33 +22,42 @@ class PlayableCardTest {
 
     @BeforeAll
     static void setCardsLists() {
-        resourceCards = JSONParser.deckFromJSONConstructor("resource_cards.json", new TypeToken<>() {
-        });
-        goldCards = JSONParser.deckFromJSONConstructor("gold_cards.json", new TypeToken<>() {
-        });
-        initialCards = JSONParser.deckFromJSONConstructor("initial_cards.json", new TypeToken<>() {
-        });
+        resourceCards = CardDeckTest.loadCardDeckAsArrayList(CardDeckTest.RESOURCE_DECK_FILENAME, new TypeToken<>(){});
+        goldCards = CardDeckTest.loadCardDeckAsArrayList(CardDeckTest.GOLD_DECK_FILENAME, new TypeToken<>(){});
+        initialCards = CardDeckTest.loadCardDeckAsArrayList(CardDeckTest.INITIAL_DECK_FILENAME, new TypeToken<>(){});
     }
 
     @Test
     void getCornerResource() {
+        assertEquals(Resource.PLANT, initialCards.getFirst().getCornerResource(Side.BACK, 1, 1));
+        assertEquals(Resource.INSECT, initialCards.getFirst().getCornerResource(Side.BACK, -1, -1));
 
-        assertEquals(Resource.PLANT, initialCards.get(0).getCornerResource(Side.BACK, 1, 1));
-        assertEquals(Resource.INSECT, initialCards.get(0).getCornerResource(Side.BACK, -1, -1));
+        assertEquals(1, initialCards.getFirst().getCenterBackResources().get(Resource.INSECT));
+        assertNull(initialCards.getFirst().getCenterBackResources().get(Resource.PLANT));
+        assertNull(initialCards.getFirst().getCenterBackResources().get(Resource.FUNGI));
+        assertNull(initialCards.getFirst().getCenterBackResources().get(Resource.ANIMAL));
 
-        assertEquals(1, initialCards.get(0).getCenterBackResources().get(Resource.INSECT));
-        assertNull(initialCards.get(0).getCenterBackResources().get(Resource.PLANT));
-        assertNull(initialCards.get(0).getCenterBackResources().get(Resource.FUNGI));
-        assertNull(initialCards.get(0).getCenterBackResources().get(Resource.ANIMAL));
+        assertEquals(Resource.FUNGI, resourceCards.getFirst().getCornerResource(Side.FRONT, -1, 1));
+        assertEquals(Resource.FUNGI, resourceCards.getFirst().getCornerResource(Side.FRONT, -1, -1));
+        assertEquals(Resource.NOT_A_CORNER, resourceCards.getFirst().getCornerResource(Side.FRONT, 1, -1));
+        assertEquals(Resource.EMPTY, resourceCards.getFirst().getCornerResource(Side.FRONT, 1, 1));
 
-        assertEquals(Resource.FUNGI, resourceCards.get(0).getCornerResource(Side.FRONT, -1, 1));
-        assertEquals(Resource.FUNGI, resourceCards.get(0).getCornerResource(Side.FRONT, -1, -1));
-        assertEquals(Resource.NOT_A_CORNER, resourceCards.get(0).getCornerResource(Side.FRONT, 1, -1));
-        assertEquals(Resource.EMPTY, resourceCards.get(0).getCornerResource(Side.FRONT, 1, 1));
+        assertEquals(Resource.NOT_A_CORNER, goldCards.getFirst().getCornerResource(Side.FRONT, -1, 1));
+        assertEquals(Resource.EMPTY, goldCards.getFirst().getCornerResource(Side.FRONT, -1, -1));
+        assertEquals(Resource.QUILL, goldCards.getFirst().getCornerResource(Side.FRONT, 1, -1));
+        assertEquals(Resource.EMPTY, goldCards.getFirst().getCornerResource(Side.FRONT, 1, 1));
+    }
 
-        assertEquals(Resource.NOT_A_CORNER, goldCards.get(0).getCornerResource(Side.FRONT, -1, 1));
-        assertEquals(Resource.EMPTY, goldCards.get(0).getCornerResource(Side.FRONT, -1, -1));
-        assertEquals(Resource.QUILL, goldCards.get(0).getCornerResource(Side.FRONT, 1, -1));
-        assertEquals(Resource.EMPTY, goldCards.get(0).getCornerResource(Side.FRONT, 1, 1));
+    @Test
+    void awardPointsOfCardPlacedOnBackTest(){
+        Player player = new Player("TestPlayer");
+        GameLobby lobby = new GameLobby(player, 1);
+        Game game = new Game(lobby);
+        PlayableCard targetPlacedCard = initialCards.getFirst();
+
+        InGamePlayer target = game.getPlayers().getFirst();
+        target.addCardToHand(targetPlacedCard);
+        assertDoesNotThrow(() -> target.placeCard(new GenericPair<>(0,0), target.getCardsInHand().getFirst(), Side.BACK));
+        assertEquals(0, targetPlacedCard.awardPoints(target));
     }
 }
